--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="pravee.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Pravee.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Praveena R</h1>
             <p>Information Technology student</p>
         </div>
